# WINGS_ICT_TEST

./: CMakeLists.txt  CMakePresets.json  README.md  gcc-arm-none-eabi.cmake  stm32l412.ld
hardware/: wings_ict.kicad_sch
inc/: adt7420.h  bsp.h  pid.h  stm32l412.h  utils.h
inc/components/: flash.h  gpio.h  i2c.h  pwr.h  rcc.h  rtc.h
src/: adt7420.c  bsp.c  main.c  nvic_it_handlers.c  pid.c  startup.c
